Pre-2.2.0
    New Features
      - reformating css with multiline now adds space after selector comma
      - new environment variable added: SIGIL_PREVIEW_TIMEOUT
           (in milliseconds) to control Preview updating intervals valid range 100 - 10000
           default value: 1000, will be set once at Sigil startup.

    Bug Fixes
      - add in Bulk Resource Move and use bulk delete to handle epubs with thousands of files
      - In FR, if Replace has focus and Find done, CodeView should get focus (Thanks BeckyEbook)      


Sigil-2.1.0
    New Features
      - assign menu accelerators P - &Plugins, and K - Chec&kpoints (thank you BeckyEbook)
      - add ability to change keyboard focus using keyboard shortcuts or menus
          to BookBrowser, Preview, CodeView, ClipsWindow, and TableOfContents Windows
      - preserve Media Overlay Active Classes when deleting unused classes
      - Goto Link Or Style (or Ctrl-Clicking on a class will now search selectors
          with combinators if nothing found in normal css classes
      - update to a newer Spanish hunspell dictionary
      - overhaul of Building on Linux documentation
      - update 3rdparty zlib to version 1.3.1 for security and other bug fixes
      - update 3rdparty pcre2 to version 10.43 for security and other bug fixes
      - update to Qt 6.6.2 for security fixes, accessibility improvements
      - allow cancelling of Save if mend on save set and not well formed
      - Windows users can now set the SIGIL_USE_FREETYPE_FONTENGINE environment variable
           to more fully support woff and woff2 fonts
      
    Bug Fixes
      - multiple bug fixes from Qt 6.6.2 such as the transient child window resize bug on Windows, etc
      - fix QuickParser bug when parsing attribute names not properly ignoring all legal whitespace
      - make OPF parsing robust to alternative whitespace usage as well
      - fix creation of thumbnails of svg images in SelectFiles and Image Report for macOS