@@ -1,6 +1,6 @@
 /************************************************************************
 **
-**  Copyright (C) 2015-2021 Kevin B. Hendricks, Stratford Ontario Canada
+**  Copyright (C) 2015-2024 Kevin B. Hendricks, Stratford Ontario Canada
 **  Copyright (C) 2009-2011 Strahinja Markovic  <strahinja.markovic@gmail.com>
 **
 **  This file is part of Sigil.
@@ -88,6 +88,9 @@ public:
      */
     QList <Resource *> ValidSelectedCSSResources();
 
+    QList <Resource *> ValidSelectedSVGResources();
+    QList <Resource *> ValidSelectedJSResources();
+    QList <Resource *> ValidSelectedMiscXMLResources();
 
     /**
      * All HTML resources in the Book Browser in order
@@ -467,6 +470,8 @@ private:
      * List of selected resources after validating selected resources are of the given type
      */
     QList <Resource *> ValidSelectedResources(Resource::ResourceType resource_type);
+
+    QList <Resource *> ValidSelectedResourcesByMT(QStringList &mts);
 
     void RefreshCounts();
 
